# vl

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  DECISIONS.md  README.md  ROADMAP.md  deno.json  package-lock.json  package.json
.claude/: settings.json
.devcontainer/: Dockerfile  README.md  devcontainer.json  init-firewall.sh
Formula/: vl.rb
antlr4/: build.gradle
compiler/: ast.ts  ast.vl  buildCache.ts  check_query.vl  check_state.vl  cli.ts  cli.vl  cli_util.vl  compile.ts  coreTypes.ts  defaultScope.ts  diagnostics.ts  driver.vl  emit_base.vl  emit_bignum.vl  emit_bytes.vl  emit_classify.vl  emit_collect.vl  emit_mono.vl  emit_query.vl  emit_rep.vl  emit_rewrite.vl  emit_sections.vl  emit_state.vl  entry.vl  fmt_util.vl  format.ts  format.vl  lexer.ts  lexer.vl  lint.ts  lint.vl  moduleRewrite.ts  modules.ts  parser.ts  parser.vl  state.ts  symbols.ts  toAST.ts  toWasm.ts  (+6 more)
docs/: README.md  agent-playbook.md  agent-pr-watch.md  binaryen-transition.md  cli-design.md  codegen-architecture.md  codegen-builder-migration-plan.md  collections-design.md  deno-deprecation.md  error-handling-design.md  genesis-design.md  incremental-build-design.md  lambda-param-skip-design.md  language-todo.md  modules-design.md  monomorphization-design.md  narrowing.md  native-modules-design.md  perf-findings.md  selfhost-corpus-paydown-findings.md  selfhost-g2-spec.md  selfhost-gaps.md  selfhost-lambdas-design.md  selfhost-name-section.md  selfhost-numeric-types-design.md  selfhost-spans-design.md  soundness-findings.md  soundness.md  std-design.md  strings-design.md  test-runner-design.md  unions.md  vl-dogfooding-notes.md  vl-tech-debt.md  wasm-toolchain-audit.md  wasmtime-parity.md
grammar/: VL_Lexer.g4  VL_Parser.g4  build.gradle
java/: build.gradle
lsp/: README.md  deno.json  language-configuration.json  package.json
playground/: README.md  build.ts  index.html  serve.ts  verify.ts
samples/: functions.vl  functions.vt  ifs.vl  logging.vl  loops.vt  memory.vl  numbers.vt  sample.vl  variables.vl
scripts/: agent-setup.sh  build-binary.sh  build-binary.ts  build-compiler-wasm.ts  build-format.sh  checker-parity-sweep.ts  fetch-seed.sh  format-diff.py  fuzz-nightly.sh  fuzz-sweep.sh  fuzz-vl.sh  fuzz.ts  fuzzgen.vl  gen-std.ts  (+15 more)
scripts/vl-host/: Cargo.toml  build.rs
scripts/vl-host/src/: main.rs
(+1485 files in other folders)
