# The native `vl` tool — a THIN host adapter around the self-hosted VL compiler.
#
# All compiler logic (lex/parse/typecheck/emit) lives in `build/vl-compiler.wasm`,
# the VL-written compiler compiled to wasm (see scripts/build-compiler-wasm.ts).
# This crate is only the OS shim: argv, file I/O, stdout, and the wasmtime
# embedding. It never parses or types VL itself.
#
#   deno run -A scripts/build-compiler-wasm.ts     # build the compiler wasm (stage 0)
#   cargo build --release                          # build the `vl` binary
#   target/release/vl run hello.vl                 # compile + run, no deno/V8/node

[package]
name = "vl"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmtime = "45"
anyhow = "1"

[[bin]]
name = "vl"
path = "src/main.rs"

[profile.release]
opt-level = 1
