# The native `vl` tool — a THIN host adapter around the self-hosted VL compiler.
#
# All compiler logic (lex/parse/typecheck/emit) lives in `build/vl-compiler.wasm`,
# the VL-written compiler self-compiled to wasm (see scripts/refresh-compiler.sh /
# fetch-seed.sh). This crate is only the OS shim: argv, file I/O, stdout, and the
# wasmtime embedding. It never parses or types VL itself.
#
#   scripts/fetch-seed.sh                          # get a compiler seed into build/
#   cargo build --release                          # build the `vl` binary
#   target/release/vl run hello.vl                 # compile + run, no deno/V8/node
#
# Release (distribution) build — bakes the seed into the binary so it ships as one
# self-contained file (build.rs stages build/vl-compiler.wasm, or $VL_EMBED_SEED,
# at compile time):
#
#   scripts/fetch-seed.sh
#   cargo build --release --features embed-seed    # single-file `vl`, runs anywhere

[package]
name = "vl"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
# Bake build/vl-compiler.wasm into the binary (via build.rs) as the final
# seed-resolution fallback. OFF by default so normal dev/CI builds need no seed
# present at compile time (ci-native builds the host BEFORE minting the seed).
embed-seed = []

[dependencies]
wasmtime = "45"
anyhow = "1"

[[bin]]
name = "vl"
path = "src/main.rs"

[profile.release]
opt-level = 1
